<resources>
    <string name="app_name">BrigthEYEd</string>

    <!-- Access Activity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="doctor_reserved">Doctor Reserved Area</string>
    <string name="patient_reserved">Patient Reserved Area</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="show_psw">Show Password</string>
    <string name="hide_psw">Hide Password</string>
    <string name="goto_patient">Are you a patient? Press here</string>
    <string name="goto_doctor">Are you a doctor? Press here</string>
    <string name="psw_back">Insert you registered email</string>

    <!-- Dashboard Activity -->
    <string name="title_activity_dashboard_doctor_">DashboardDoctor_Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard_patient_">DashboardPatient_Activity</string>
</resources>
